Can't manipulate hair keys with G, R, S or mirror transforms #59963

Closed
opened 2018-12-29 18:57:24 +01:00 by msalv · 5 comments

System Information
Windows 10 64
nvidia 1060

Blender Version
Broken: blender-2.80.0-git.370019204316-windows64
Worked: 2.79
Short description of error

You can't move the individual keys of particles by pressing G, R or S in particle edit mode

Exact steps for others to reproduce the error
Using the blend file, Press G, R or s to transform the keys of the hair. The keys are already selected

bug6.blend

**System Information** Windows 10 64 nvidia 1060 **Blender Version** Broken: blender-2.80.0-git.370019204316-windows64 Worked: 2.79 **Short description of error** You can't move the individual keys of particles by pressing G, R or S in particle edit mode **Exact steps for others to reproduce the error** Using the blend file, Press G, R or s to transform the keys of the hair. The keys are already selected [bug6.blend](https://archive.blender.org/developer/F6109019/bug6.blend)
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB

@brecht should I assign this to anyone?

@brecht should I assign this to anyone?
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-28 10:13:51 +01:00

This issue was referenced by 56cc219070

This issue was referenced by 56cc21907042dfbeb9901cb5791bda9a5244e864

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59963
No description provided.